@@ -65,7 +65,8 @@ import org.jfree.chart.util.Args;
  * sorting can be used to keep the data items in order.
  *
  */
-public class TimeSeriesDataItem implements Cloneable, Comparable, Serializable {
+public class TimeSeriesDataItem implements Cloneable, 
+        Comparable<TimeSeriesDataItem>, Serializable {
 
     /** For serialization. */
     private static final long serialVersionUID = -2235346966016401302L;
@@ -95,7 +96,7 @@ public class TimeSeriesDataItem implements Cloneable, Comparable, Serializable {
      * @param value  the value associated with the time period.
      */
     public TimeSeriesDataItem(RegularTimePeriod period, double value) {
-        this(period, new Double(value));
+        this(period, Double.valueOf(value));
     }
 
     /**
@@ -180,26 +181,8 @@ public class TimeSeriesDataItem implements Cloneable, Comparable, Serializable {
      *         relative to another object.
      */
     @Override
-    public int compareTo(Object o1) {
-
-        int result;
-
-        // CASE 1 : Comparing to another TimeSeriesDataItem object
-        // -------------------------------------------------------
-        if (o1 instanceof TimeSeriesDataItem) {
-            TimeSeriesDataItem datapair = (TimeSeriesDataItem) o1;
-            result = getPeriod().compareTo(datapair.getPeriod());
-        }
-
-        // CASE 2 : Comparing to a general object
-        // ---------------------------------------------
-        else {
-            // consider time periods to be ordered after general objects
-            result = 1;
-        }
-
-        return result;
-
+    public int compareTo(TimeSeriesDataItem other) {
+        return getPeriod().compareTo(other.getPeriod());
     }
 
     /**
